maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:33: error: not found: value b
    if (b==0) {
        ^Escaper:35: error: not found: value b
      b=2
      ^Escaper:37: error: not found: value b
    b-=1
    ^