maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  
  
  
  while (!estSurBiscuit()) {
   
    
    keepHandOnSideWall()
  }
  prendBiscuit() 
  
}

def keepHandOnSideWall() {
  
  var a=0
  if (a==0 && getDirection==Direction.NORD) {
    while(!estFaceMur) {
      avance()
    }
    droite()
  }
  else {
    while (!estFaceMur) {
      avance() 
      gauche()
      if (!estFaceMur) {
        a+=1
      }
    }
    droite()
    if (b==0) {
      a-=1
      b=2
    }
    b-=1
  }
}